--- a/_modules/orion/primitives/timeseries_errors.html
+++ b/_modules/orion/primitives/timeseries_errors.html
@@ -156,15 +156,15 @@
 <span class="sd">Time Series error calculation functions.</span>
 <span class="sd">&quot;&quot;&quot;</span>
 
-<span class="kn">import</span> <span class="nn">math</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">math</span>
 
-<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
-<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
-<span class="kn">from</span> <span class="nn">pyts.metrics</span> <span class="kn">import</span> <span class="n">dtw</span>
-<span class="kn">from</span> <span class="nn">scipy</span> <span class="kn">import</span> <span class="n">integrate</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">numpy</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">np</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">pandas</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">pd</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">pyts.metrics</span><span class="w"> </span><span class="kn">import</span> <span class="n">dtw</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">scipy</span><span class="w"> </span><span class="kn">import</span> <span class="n">integrate</span>
 
 
-<div class="viewcode-block" id="regression_errors"><a class="viewcode-back" href="../../../api_reference/api/orion.primitives.timeseries_errors.regression_errors.html#orion.primitives.timeseries_errors.regression_errors">[docs]</a><span class="k">def</span> <span class="nf">regression_errors</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">,</span> <span class="n">smoothing_window</span><span class="o">=</span><span class="mf">0.01</span><span class="p">,</span> <span class="n">smooth</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+<div class="viewcode-block" id="regression_errors"><a class="viewcode-back" href="../../../api_reference/api/orion.primitives.timeseries_errors.regression_errors.html#orion.primitives.timeseries_errors.regression_errors">[docs]</a><span class="k">def</span><span class="w"> </span><span class="nf">regression_errors</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">,</span> <span class="n">smoothing_window</span><span class="o">=</span><span class="mf">0.01</span><span class="p">,</span> <span class="n">smooth</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                       <span class="n">masking_window</span><span class="o">=</span><span class="mf">0.01</span><span class="p">,</span> <span class="n">mask</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an array of absolute errors comparing predictions and expected output.</span>
 
@@ -206,7 +206,7 @@
     <span class="k">return</span> <span class="n">errors</span></div>
 
 
-<span class="k">def</span> <span class="nf">_point_wise_error</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">):</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">_point_wise_error</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute point-wise error between predicted and expected values.</span>
 
 <span class="sd">    The computed error is calculated as the difference between predicted</span>
@@ -225,7 +225,7 @@
     <span class="k">return</span> <span class="nb">abs</span><span class="p">(</span><span class="n">y</span> <span class="o">-</span> <span class="n">y_hat</span><span class="p">)</span>
 
 
-<span class="k">def</span> <span class="nf">_area_error</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">,</span> <span class="n">score_window</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">_area_error</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">,</span> <span class="n">score_window</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute area error between predicted and expected values.</span>
 
 <span class="sd">    The computed error is calculated as the area difference between predicted</span>
@@ -254,7 +254,7 @@
     <span class="k">return</span> <span class="n">errors</span>
 
 
-<span class="k">def</span> <span class="nf">_dtw_error</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">,</span> <span class="n">score_window</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">_dtw_error</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">,</span> <span class="n">score_window</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute dtw error between predicted and expected values.</span>
 
 <span class="sd">    The computed error is calculated as the dynamic time warping distance</span>
@@ -301,7 +301,7 @@
     <span class="k">return</span> <span class="n">errors</span>
 
 
-<div class="viewcode-block" id="reconstruction_errors"><a class="viewcode-back" href="../../../api_reference/api/orion.primitives.timeseries_errors.reconstruction_errors.html#orion.primitives.timeseries_errors.reconstruction_errors">[docs]</a><span class="k">def</span> <span class="nf">reconstruction_errors</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">,</span> <span class="n">step_size</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">score_window</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span> <span class="n">smoothing_window</span><span class="o">=</span><span class="mf">0.01</span><span class="p">,</span>
+<div class="viewcode-block" id="reconstruction_errors"><a class="viewcode-back" href="../../../api_reference/api/orion.primitives.timeseries_errors.reconstruction_errors.html#orion.primitives.timeseries_errors.reconstruction_errors">[docs]</a><span class="k">def</span><span class="w"> </span><span class="nf">reconstruction_errors</span><span class="p">(</span><span class="n">y</span><span class="p">,</span> <span class="n">y_hat</span><span class="p">,</span> <span class="n">step_size</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">score_window</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span> <span class="n">smoothing_window</span><span class="o">=</span><span class="mf">0.01</span><span class="p">,</span>
                           <span class="n">smooth</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">rec_error_type</span><span class="o">=</span><span class="s1">&#39;point&#39;</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an array of reconstruction errors.</span>
 
